--- a/data/portfolio/budget-app/index.mdx
+++ b/data/portfolio/budget-app/index.mdx
@@ -1,8 +1,9 @@
 ---
-title: 'Minty Budget App',
-subtitle: 'Gain insights into your budgets and finances.',
-link: 'https://minty-budget-tool.herokuapp.com/',
-image: 'demo.png',
+title: 'Minty Budget App'
+subtitle: 'Gain insights into your budgets and finances.'
+link: 'https://minty-budget-tool.herokuapp.com/'
+image: 'demo.png'
+date: '2000-01-01'
 ---
 
 Add more detail here later?
