--- a/data/portfolio/nyc-app/index.mdx
+++ b/data/portfolio/nyc-app/index.mdx
@@ -1,8 +1,9 @@
 ---
-title: 'NYC Complaints',
-subtitle: 'Dashboard of borough complaints, with an SQL and chart editor inside.',
-link: 'https://dash-demo.plotly.host/dash-nyc-complaints/',
-image: 'demo.png',
+title: 'NYC Complaints'
+subtitle: 'Dashboard of borough complaints, with an SQL and chart editor inside.'
+link: 'https://dash-demo.plotly.host/dash-nyc-complaints/'
+image: 'demo.png'
+date: '2000-01-01'
 ---
 
 Add more detail here later?
