refactor(posts): update images

--- a/data/blog/xaxis-ticks/index.mdx
+++ b/data/blog/xaxis-ticks/index.mdx
@@ -3,6 +3,7 @@ title: 'Override the Default Behaviour for Plotly Date Axes'
 subtitle: 'Time appears in the date axis when the date range is small or when you zoom in. What is the best way to override this default behaviour?'
 author: 'Aanika Rahman'
 date: '2021-06-29'
+image: 'xaxis-ticks.png'
 ---
 
 import default_days_3 from './default_days_3.png'
