--- a/data/blog/xaxis-ticks/index.mdx
+++ b/data/blog/xaxis-ticks/index.mdx
@@ -23,11 +23,13 @@ In this article, we will outline how the default behaviour for date axis ticks l
 
 ## Default for Tick Labels on a Date Axis
 
+
+
 When you make a chart with dates, the x-axis automatically adapts its tick labels to fit the spacing of the graph. This also occurs every time you zoom in/out of the graph. We see such adjustments for the charts below:
 
 <ImageBlock>
-  <img src={default_days_3} width="49.5%" />
-  <img src={default_days_100} width="49.5%" /> 
+  <Image src={default_days_3}/>
+  <Image src={default_days_100}/> 
 </ImageBlock>
 
 In the above examples, the dates in the provided data include year, month, day but no time (e.g. `"2020-01-01"` or `datetime.date(2020, 1, 1)`). Notice when there are a fewer days (e.g. 3 days) along the date axis, the time also appears in the tick label. We see that any data point that was meant to be representative of a day, is assigned to that day at time **00:00:00**.
@@ -81,8 +83,8 @@ fig.update_xaxes(
 Since we only change the tick label and not the tick interval, this fix simply replaces time-specific tick labels with just dates. Unfortunately, this leaves us with repeating dates when the date range is small: 
 
 <ImageBlock>
-  <img src={tickformatstops_days_3} width="49.5%" />
-  <img src={tickformatstops_days_100} width="49.5%" /> 
+  <Image src={tickformatstops_days_3}/>
+  <Image src={tickformatstops_days_100}/> 
 </ImageBlock>
 
 ### 3. Change tick interval
@@ -98,8 +100,8 @@ fig.update_xaxes(dtick=86400000)
 This works well when the date range spans a smaller number of days (e.g. 3 days), but when the date range gets larger (e.g. 100 days), the x-axis can get crowded:
 
 <ImageBlock>
-  <img src={dtick_days_3} width="49.5%" />
-  <img src={dtick_days_100} width="49.5%" /> 
+  <Image src={dtick_days_3}/>
+  <Image src={dtick_days_100}/> 
 </ImageBlock>
 
 If you never have too many days along the date axis, this is definitely a viable option! Otherwise, the next solution attempts to resolve this. 
@@ -126,8 +128,8 @@ if num_days < MAX_DAYS_WITH_DTICK_FORMAT:
 Although this little hack does wonders, it is important to realize that since graph widths may vary for different screen sizes, you may need to experiment to find the ideal value for `MAX_DAYS_WITH_DTICK_FORMAT`. If all goes well, we have a clean date axis with no timestamps!
 
 <ImageBlock>
-  <img src={dtick_with_constant_days_3} width="49.5%" />
-  <img src={dtick_with_constant_days_100} width="49.5%" /> 
+  <Image src={dtick_with_constant_days_3}/>
+  <Image src={dtick_with_constant_days_100}/> 
 </ImageBlock>
 
 ## Conclusion
